--- a/update 19.2.23/README.me
+++ b/update 19.2.23/README.me
@@ -1,5 +1,5 @@
 render_templates flask
 html
 
-# ЩОБ ПОКАЗУВАЛОСЬ ФОТО З html файлу потрібно створити папку static/images і туди закинути файл, 
-# і в html файлі вказати шлях  path static/images/image_name.png
+щоб фото з .html файлу показувалось потрібно створити папку static/images і туди закиути фотку/файл, 
+і в .html файлі вказати шлях path static/images/image_name.png
